// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component testing Accordion 1`] = `
<DocumentFragment>
  <div
    class="sc-dmyCSP boCXZE"
  >
    <div
      aria-controls="accordion-content-Accordion Title"
      aria-expanded="false"
      class="sc-guDLey sc-hLQSwg kaqXVj hUAmYz"
      display="flex"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-eDLKkx kAlcwl"
      >
        Accordion Title
      </div>
      <div
        class="sc-iBdnpw bVQOxU"
      >
        <div
          class="sc-gLLuof jAqgfx"
        >
          <span
            class="sc-beySPh fgKFxv"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0,0H24V24H0Z"
                fill="none"
              />
              <path
                d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                fill="black"
                transform="translate(-1.414 -1.114)"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-fsYfdN eNOaCc"
      height="0"
    >
      Accordion Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accordion component testing Disable Accordion 1`] = `
<DocumentFragment>
  <div
    class="sc-dmyCSP boCXZE"
  >
    <div
      aria-controls="accordion-content-Accordion Title"
      aria-expanded="false"
      class="sc-guDLey sc-hLQSwg iWLnSc koZVsj"
      disabled=""
      display="flex"
      role="button"
      tabindex="-1"
    >
      <div
        class="sc-eDLKkx kAlcwl"
      >
        Accordion Title
      </div>
      <div
        class="sc-iBdnpw bVQOxU"
      >
        <div
          class="sc-gLLuof jAqgfx"
        >
          <span
            class="sc-beySPh fgKFxv"
            size="18"
          >
            <svg
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0,0H24V24H0Z"
                fill="none"
              />
              <path
                d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                fill="#B3BAC1"
                transform="translate(-1.414 -1.114)"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-fsYfdN eNOaCc"
      height="0"
    >
      Accordion Content
    </div>
  </div>
</DocumentFragment>
`;
